Frankbelford/uatv1ba/force-app/main/default/objects/Search_Parameter__c/Search_Parameter__c.object-meta.xml
<CustomObject>
    <label>Search Parameter</label>
    <nameField>
        <label>Search Parameter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Search Parameters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>