Frankbelford/uatv1ba/force-app/main/default/objects/Search_Parameter__c/fields/Data_Category__c.field-meta.xml
<CustomField>
    <fullName>Data_Category__c</fullName>
    <label>Data Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>ADR Specific</fullName>
            </value>
            <value>
                <fullName>Bus/Coach</fullName>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Chef</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Driving Generic</fullName>
            </value>
            <value>
                <fullName>Driving Related</fullName>
            </value>
            <value>
                <fullName>FLT</fullName>
            </value>
            <value>
                <fullName>LGV Various</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Manual/Physical Labour</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>