Frankbelford/uatv1ba/force-app/main/default/objects/Search_Parameter__c/fields/Data_Category_Text__c.field-meta.xml
<CustomField>
    <fullName>Data_Category_Text__c</fullName>
    <label>Data Category Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>