Frankbelford/uatv1ba/force-app/main/default/objects/Search_Parameter__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Town/City</fullName>
            </value>
            <value>
                <fullName>Postcode</fullName>
            </value>
            <value>
                <fullName>Job Category</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>