Frankbelford/uatv1ba/force-app/main/default/objects/Search_Parameter__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Job</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>