Frankbelford/uatv1ba/force-app/main/default/objects/Search_Parameter__c/listViews/Searching.listView-meta.xml
<ListView>
    <fullName>Searching</fullName>
    <columns>NAME</columns>
    <columns>County__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>contains</operation>
        <value>Job</value>
    </filters>
    <label>Searching</label>
    <language>en_US</language>
</ListView>